samples/_failures_safe/1761304957_ed715f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3420ed57.c: In function ‘tokenize’:
./samples/SAFE/__tmp_3420ed57.c:157:33: error: ‘TOKEN_IN’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  157 |                 current->type = TOKEN_IN
      |                                 ^~~~~~~~
      |                                 TOKEN_EOF
./samples/SAFE/__tmp_3420ed57.c:157:33: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3420ed57.c:157:41: error: expected ‘;’ at end of input
  157 |                 current->type = TOKEN_IN
      |                                         ^
      |                                         ;
./samples/SAFE/__tmp_3420ed57.c:157:17: error: expected declaration or statement at end of input
  157 |                 current->type = TOKEN_IN
      |                 ^~~~~~~
./samples/SAFE/__tmp_3420ed57.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3420ed57.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3420ed57.c:157:17: error: expected declaration or statement at end of input
